--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="https://covid-19.direct/smallercover.jpeg" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="/my-app/manifest.json" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <title>Covid-19 Direct</title>
 </head>
